syntax = "proto3";

package KPProto.Prompt;

option optimize_for = LITE_RUNTIME;
option go_package = "github.com/bytelang/kplayer/types/core/prompt";

message EventPromptOutputAdd {
	bytes path = 1;
	bytes unique = 2;
}

message EventPromptOutputRemove {
	bytes unique = 1;
}
